--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,12 @@ url:                 http://anishdeena.github.io
 paginate:            1
 baseurl:             ""
 
+# Navigation bar
+pages_list:       
+  About: '/about'
+  Archive: '/archive'
+  Feed: '/atom.xml'
+
 # Assets
 #
 # We specify the directory for Jekyll so we can use @imports.
